force-app/main/default/objects/Custom_Quick_Link_Group__mdt/Custom_Quick_Link_Group__mdt.object-meta.xml
<CustomObject>
    <label>Custom Quick Link Group</label>
    <pluralLabel>Custom Quick Links Group</pluralLabel>
</CustomObject>