force-app/main/default/objects/Custom_Quick_Link_Group__mdt/fields/Assigned_Flexipage__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Flexipage__c</fullName>
    <description>Flexipage API name that aligns with all the record types listed under &quot;Display Record Types&quot;.</description>
    <inlineHelpText>Flexipage API name that aligns with all the record types listed under &quot;Display Record Types&quot;.</inlineHelpText>
    <label>Assigned Flexipage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>