force-app/main/default/objects/Custom_Quick_Link_Group__mdt/fields/Display_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Display_Record_Types__c</fullName>
    <description>Comma-separated list of record type API names that align with the flexipage listed under the &quot;Assigned Flexipage&quot; field. When the &quot;Custom Quick Links&quot; component is placed on a flexipage (which aligns with these record types) for this object, all child &quot;Custom Quick Link&quot; records will be displayed.</description>
    <inlineHelpText>Comma-separated list of record type API names that align with the flexipage listed under the &quot;Assigned Flexipage&quot; field. When the &quot;Custom Quick Links&quot; component is placed on a flexipage (which aligns with these record types) for this object, all child &quot;Custom Quick Link&quot; records will be displayed.</inlineHelpText>
    <label>Display Record Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>