force-app/main/default/objects/Custom_Quick_Link_Group__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>The API name of the object that will display the custom quick links component.</description>
    <inlineHelpText>The API name of the object that will display the custom quick links component.</inlineHelpText>
    <label>Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Account_Group__c</fullName>
            </value>
            <value>
                <fullName>ChangeRequest__c</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Legal_Agreement__c</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>