force-app/main/default/objects/Custom_Quick_Link_Group__mdt/listViews/All_Custom_Quick_Link_Groups.listView-meta.xml
<ListView>
    <fullName>All_Custom_Quick_Link_Groups</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object_Type__c</columns>
    <columns>Assigned_Flexipage__c</columns>
    <columns>Display_Record_Types__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Custom Quick Link Groups</label>
</ListView>